--- a/README
+++ b/README
@@ -1,9 +1,10 @@
-									MY_HUNTER
+				MY_HUNTER
 
-Après avoir lancé le jeu, un canard prendra son envol dans... l'ESPACE !!
-Votre mission, si vous l'acceptez, sera de tuer ce mignon petit canard et ses semblables.
-La seule arme qui vous sera utile lors de votre aventure sera une souris (dont seul le clique gauche vous permettra de tuer les canards), je vous conseille aussi l'utilisation d'un casque pour profiter au mieux du vol des canards. :)
-Vous n'avez qu'une seule vie ^^
-Faites attention si un seul des canard s'échappe, votre expérience s'arrêtera.
-Plus vous en eliminerez, plus les canards voleront vite.
-Bonne chance jeune inconnu.
+
+After launching the game, a duck will take flight in ... SPACE !!
+Your mission, if you accept it, will be to kill this cute little duck and his family.
+The only weapon that will be useful during your adventure will be a mouse (which only the left click will allow you to kill the ducks), I also advise the use of a helmet to make the most of the flight of ducks. :)
+You only have one life ^^
+Be careful if only one of the duck escapes, your adventure will stop.
+The more you eliminate, the more ducks will fly fast.
+Good luck young stranger.
