--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 
 After launching the game, a duck will take flight in ... SPACE !!
 Your mission, if you accept it, will be to kill this cute little duck and his family.
-The only weapon that will be useful during your adventure will be a mouse (which only the left click will allow you to kill the ducks), I also advise the use of a helmet to make the most of the flight of ducks. :)
+The only weapon that will be useful during your adventure will be a mouse (which only the left click will allow you to kill the ducks), I also advise the use of a headphones to make the most of the flight of ducks. :)
 You only have one life ^^
 Be careful if only one of the duck escapes, your adventure will stop.
 The more you eliminate, the more ducks will fly fast.
